deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: thitipun
  name: thitipun
  namespace: thitipun-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thitipun
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: thitipun
    spec:
      containers:
      - image: latest
        name: latest
        resources: {}
status: {}
