service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: thitipun
  name: thitipun
  namespace: thitipun-dev
spec:
  ports:
  - name: 8000-80
    port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    app: thitipun
  type: ClusterIP
status:
  loadBalancer: {}
